--- a/reset-password-english.html
+++ b/reset-password-english.html
@@ -78,7 +78,7 @@
                                         </tr>
                                         <!-- content -->
                                         <tr>
-                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:18px; color:#7f8c8d; line-height:20px;" th:inline="text">Hi [[${first_name}]], you request for change your password. If you didn't request for any change, please ignore this e-mail.</br>Click the link below to proceed.</td>
+                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:18px; color:#7f8c8d; line-height:20px;" th:inline="text">Hi [[${first_name}]], you request for change your password. If you didn't request for any change, please ignore this e-mail. Click the link below to proceed.</td>
                                         </tr>
                                         </tbody>
                                     </table>
