--- a/reset-password-french.html
+++ b/reset-password-french.html
@@ -78,7 +78,7 @@
                                         </tr>
                                         <!-- content -->
                                         <tr>
-                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:18px; color:#7f8c8d; line-height:20px;" th:inline="text">Bonjour [[${first_name}]], vous avez demandé à changer votre mot de passe. Si cet e-mail est une erreur, veuillez l'ignorer.</br>Pour continuer merci de cliquer sur le lien ci-dessous.</td>
+                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:18px; color:#7f8c8d; line-height:20px;" th:inline="text">Bonjour [[${first_name}]], vous avez demandé à changer votre mot de passe. Si cet e-mail est une erreur, veuillez l'ignorer. Pour continuer merci de cliquer sur le lien ci-dessous.</td>
                                         </tr>
                                         </tbody>
                                     </table>
