--- a/welcome-mail-french.html
+++ b/welcome-mail-french.html
@@ -825,7 +825,7 @@
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
                                                 Echange avec les membres tes expériences et profite des bons conseils de motards aguéris<br>
                                                 <br>
-                                                <a href="#" style="background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
+                                                <a href="https://www.nousmotards.com" style="background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
                                                 Voir les actualités</a>
                                             </td>
                                         </tr>
