--- a/welcome-mail-english.html
+++ b/welcome-mail-english.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" name="viewport">
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" name="viewport"/>
 
     <title>Welcome on Nousmotards</title>
     <style type="text/css">
