--- a/welcome-mail-french.html
+++ b/welcome-mail-french.html
@@ -294,7 +294,7 @@
                                                         "color: #FFFFFF; font-family: 'source_sans_proitalic';, Helvetica, Arial, sans-serif; font-size: 20px;"
                                                 class="scale-center-both">
                                                 <br>
-                                                <a href="https://play.google.com/store/apps/details?id=com.nousmotards.android&hl=fr">
+                                                <a href="https://play.google.com/store/apps/details?id=com.nousmotards.android">
                                                     <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/btn_google.png"
                                                          style="max-width: 300px;" border="0"/>
                                                 </a>
