edit english welcome template

--- a/welcome-mail-french.html
+++ b/welcome-mail-french.html
@@ -293,7 +293,7 @@
                                                 data-size="Header Subline" style=
                                                         "color: #FFFFFF; font-family: 'source_sans_proitalic';, Helvetica, Arial, sans-serif; font-size: 20px;"
                                                 class="scale-center-both">
-                                                <br>
+                                                <br></br>
                                                 <a href="https://play.google.com/store/apps/details?id=com.nousmotards.android">
                                                     <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/btn_google.png"
                                                          style="max-width: 300px;" border="0"/>
@@ -628,8 +628,8 @@
 
                                         <tr>
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
-                                                Grâce à notre algorithme de génération de roadbook sinueux trouvez les meilleures routes autour de chez vous en quelques clics<br>
-                                                <br>
+                                                Grâce à notre algorithme de génération de roadbook sinueux trouvez les meilleures routes autour de chez vous en quelques clics<br></br>
+                                                <br></br>
                                                 <a href="https://www.nousmotards.com/roadbook"
                                                    style=
                                                            "background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
@@ -728,8 +728,8 @@
 
                                         <tr>
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
-                                                Partage ton trajet en temps réel à tes proches ou tes amis grâce à Rideshare<br>
-                                                <br>
+                                                Partage ton trajet en temps réel à tes proches ou tes amis grâce à Rideshare<br></br>
+                                                <br></br>
                                                 <a href="https://rideshare.nousmotards.com" style="background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
                                                     Partager mon trajet</a>
                                             </td>
@@ -823,8 +823,8 @@
 
                                         <tr>
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
-                                                Echange avec les membres tes expériences et profite des bons conseils de motards aguéris<br>
-                                                <br>
+                                                Echange avec les membres tes expériences et profite des bons conseils de motards aguéris<br></br>
+                                                <br></br>
                                                 <a href="https://www.nousmotards.com" style="background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
                                                 Voir les actualités</a>
                                             </td>
