--- a/welcome-mail-french.html
+++ b/welcome-mail-french.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
-    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" name="viewport"/>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" name="viewport">
 
     <title>Bienvenue sur Nousmotards</title>
     <style type="text/css">
@@ -284,7 +284,7 @@
                                                 class="scale-center-both">
 
                                                 <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/nm_full_inverted_dark_primary.png"
-                                                     style="max-width: 300px;" border="0"/>
+                                                     style="max-width: 300px;" border="0">
                                             </td>
                                         </tr>
 
@@ -293,14 +293,14 @@
                                                 data-size="Header Subline" style=
                                                         "color: #FFFFFF; font-family: 'source_sans_proitalic';, Helvetica, Arial, sans-serif; font-size: 20px;"
                                                 class="scale-center-both">
-                                                <br></br>
-                                                <a href="https://play.google.com/store/apps/details?id=com.nousmotards.android">
+                                                <br>
+                                                <a href="https://play.google.com/store/apps/details?id=com.nousmotards.android&hl=fr">
                                                     <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/btn_google.png"
-                                                         style="max-width: 300px;" border="0"/>
+                                                         style="max-width: 300px;" border="0">
                                                 </a>
                                                 <a href="https://itunes.apple.com/us/app/nousmotards/id1191928573?mt=8">
                                                     <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/btn_apple.png"
-                                                         style="max-width: 300px;" border="0"/>
+                                                         style="max-width: 300px;" border="0">
                                                 </a>
                                             </td>
                                         </tr>
@@ -317,7 +317,7 @@
                                 <td class="scale-right" valign="bottom"><img
                                         src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/header.png"
                                         style="display: block; max-width: 282px;" class="scale-inline"
-                                        data-crop="false"/></td>
+                                        data-crop="false"></td>
                             </tr>
                         </table>
                     </td>
@@ -409,7 +409,7 @@
                                                     <tr>
                                                         <td class="scale-center-both"><img
                                                                 src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/icon_location.png"
-                                                                style="max-width: 40px;"/></td>
+                                                                style="max-width: 40px;"></td>
                                                     </tr>
 
                                                     <tr>
@@ -451,7 +451,7 @@
                                                     <tr>
                                                         <td class="scale-center-both"><img
                                                                 src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/icon_presentation.png"
-                                                                style="max-width: 40px;"/></td>
+                                                                style="max-width: 40px;"></td>
                                                     </tr>
 
                                                     <tr>
@@ -493,7 +493,7 @@
                                                     <tr>
                                                         <td class="scale-center-both"><img
                                                                 src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/icon_agenda.png"
-                                                                style="max-width: 40px;"/></td>
+                                                                style="max-width: 40px;"></td>
                                                     </tr>
 
                                                     <tr>
@@ -534,7 +534,7 @@
                                            width="265">
                                         <tr>
                                             <td align="right" class="scale-center-both">
-                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/iphone.png" style="max-width: 265px;"/>
+                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/iphone.png" style="max-width: 265px;">
                                             </td>
                                         </tr>
                                     </table>
@@ -570,7 +570,7 @@
 
                             <tr>
                                 <td align="center" class="scale-center-both">
-                                    <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/col_img_1.png"/>
+                                    <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/col_img_1.png">
                                 </td>
                             </tr>
 
@@ -628,8 +628,8 @@
 
                                         <tr>
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
-                                                Grâce à notre algorithme de génération de roadbook sinueux trouvez les meilleures routes autour de chez vous en quelques clics<br></br>
-                                                <br></br>
+                                                Grâce à notre algorithme de génération de roadbook sinueux trouvez les meilleures routes autour de chez vous en quelques clics<br>
+                                                <br>
                                                 <a href="https://www.nousmotards.com/roadbook"
                                                    style=
                                                            "background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
@@ -669,7 +669,7 @@
 
                             <tr>
                                 <td align="center" class="scale-center-both">
-                                    <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/col_img_2.png"/>
+                                    <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/col_img_2.png">
                                 </td>
                             </tr>
 
@@ -728,8 +728,8 @@
 
                                         <tr>
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
-                                                Partage ton trajet en temps réel à tes proches ou tes amis grâce à Rideshare<br></br>
-                                                <br></br>
+                                                Partage ton trajet en temps réel à tes proches ou tes amis grâce à Rideshare<br>
+                                                <br>
                                                 <a href="https://rideshare.nousmotards.com" style="background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
                                                     Partager mon trajet</a>
                                             </td>
@@ -766,7 +766,7 @@
                             </tr>
 
                             <tr>
-                                <td align="center" class="scale-center-both"><img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/col_img_3.png"/>
+                                <td align="center" class="scale-center-both"><img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/col_img_3.png">
                                 </td>
                             </tr>
 
@@ -823,8 +823,8 @@
 
                                         <tr>
                                             <td align="center" style="font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; font-size: 13px; color: #1c1c1c; line-height: 20px;">
-                                                Echange avec les membres tes expériences et profite des bons conseils de motards aguéris<br></br>
-                                                <br></br>
+                                                Echange avec les membres tes expériences et profite des bons conseils de motards aguéris<br>
+                                                <br>
                                                 <a href="https://www.nousmotards.com" style="background-color: #ef4136; color: #FFFFFF; font-family: 'source_sans_proregular', Helvetica, Arial, sans-serif; text-decoration: none; padding: 10px 20px; border-radius: 3px;">
                                                 Voir les actualités</a>
                                             </td>
@@ -863,7 +863,7 @@
 
                                         <tr>
                                             <td align="center" class="scale-center-both">
-                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/badge.png"/>
+                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/badge.png">
                                             </td>
                                         </tr>
 
@@ -888,7 +888,7 @@
                                         <tr>
                                             <td class="scale-center-both">
                                                 <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/iphone_winner.png"
-                                                style="max-width: 346px;"/>
+                                                style="max-width: 346px;">
                                             </td>
                                         </tr>
                                     </table>
@@ -995,7 +995,7 @@
                                            width="160">
                                         <tr>
                                             <td align="center" class="scale-center-both" height="50">
-                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/client_1.png" style="max-width: 160px;"/>
+                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/client_1.png" style="max-width: 160px;">
                                             </td>
                                         </tr>
 
@@ -1023,7 +1023,7 @@
                                                        width="160">
                                                     <tr>
                                                         <td align="center" class="scale-center-both" height="50">
-                                                            <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/client_2.png" style="max-width: 160px;"/>
+                                                            <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/client_2.png" style="max-width: 160px;">
                                                         </td>
                                                     </tr>
 
@@ -1047,7 +1047,7 @@
                                                        width="160">
                                                     <tr>
                                                         <td align="center" class="scale-center-both" height="50">
-                                                            <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/client_3.png" style="max-width: 160px;"/></td>
+                                                            <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/client_3.png" style="max-width: 160px;"></td>
                                                     </tr>
 
                                                     <tr>
@@ -1095,7 +1095,7 @@
                                         <tr>
                                             <td align="center" class="scale-center-both" height="70">
                                                 <a href="https://www.facebook.com/nousmotardsapp">
-                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/facebook.png" style="max-width: 265px;" border="0"/>
+                                                <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/facebook.png" style="max-width: 265px;" border="0">
                                                 </a>
                                             </td>
                                         </tr>
@@ -1107,7 +1107,7 @@
                                         <tr>
                                             <td align="center" class="scale-center-both" height="70">
                                                 <a href="https://twitter.com/Nousmotards">
-                                                    <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/twitter.png" style="max-width: 265px;"/>
+                                                    <img src="https://github.com/nousmotards/mail-template/raw/master/resources/images/welcome-mail/twitter.png" style="max-width: 265px;">
                                                 </a>
                                             </td>
                                         </tr>
