--- a/event-mail-german.html
+++ b/event-mail-german.html
@@ -77,7 +77,7 @@
                                             <td height="20"> </td>
                                         </tr>
                                         <tr>
-                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:13px; color:#7f8c8d; line-height:20px;" width="150"><img th:alt="${image_title}" th:src="${image_url}" style="width:150px;height:150px;" /></td>
+                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:13px; color:#7f8c8d; line-height:20px;" width="150"><img th:attr="alt=${image_title}" th:src="${image_url}" style="width:150px;height:150px;" /></td>
                                         </tr>
                                         <!-- content -->
                                         <tr>
