--- a/welcome-mail-french.html
+++ b/welcome-mail-french.html
@@ -957,7 +957,7 @@
                                                         <td class="text center-text"      valign="middle" align="center" style="font-family:'Roboto',Arial,Helvetica,sans-serif; font-size:36px; line-height:40px; font-style:normal;font-weight:lighter; color:#000000;text-decoration:none;letter-spacing: 0px;">
 
                                                             <!--[if (gte mso 9)|(IE)]><font face="Arial"><![endif]-->
-                                                            Conduire une moto est sans aucun doute est la sensation la plus intense qu'une machine puisse provoquer.
+                                                            Conduire une moto est sans aucun doute la sensation la plus intense qu'une machine puisse provoquer.
                                                             <!--[if (gte mso 9)|(IE)]></font><![endif]-->
 
                                                         </td>
