--- a/welcome-mail-french.html
+++ b/welcome-mail-french.html
@@ -9,7 +9,7 @@
     <meta name="format-detection" content="date=no"> <!-- disable auto date linking in iOS -->
     <meta name="format-detection" content="address=no"> <!-- disable auto address linking in iOS -->
     <meta name="format-detection" content="email=no"> <!-- disable auto email linking in iOS -->
-    <title>Email de bienvenue</title>
+    <title>Bienvenue sur Nousmotards</title>
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
 
