--- a/friend-request-english.html
+++ b/friend-request-english.html
@@ -33,7 +33,7 @@
 <table align="center" bgcolor="#494c50" border="0" cellpadding="0" cellspacing="0" width="100%">
     <tbody>
     <tr>
-        <td align="center" th:attr="background=" style="background-size:cover; background-position:top;">
+        <td align="center" background="https://raw.githubusercontent.com/nousmotards/mail-template/master/bg_nm_6.jpg" style="background-size:cover; background-position:top;">
             <table align="center" border="0" cellpadding="0" cellspacing="0" class="table-inner" width="600">
                 <tbody>
                 <tr>
