--- a/friend-english.html
+++ b/friend-english.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta http-equiv="Content-Type" content="text/html; charset=utf-8" /><meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-    <title th:inline="text">[[${requester_first_name}]] asks you as a friend</title>
+    <title th:inline="text">[[${requester_first_name}]] is now your friend</title>
     <style type="text/css">.ReadMsgBody { width: 100%; background-color: #ffffff; }
     .ExternalClass { width: 100%; background-color: #ffffff; }
     .ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div { line-height: 100%; }
@@ -59,7 +59,7 @@
                                         </tr>
                                         <!-- title -->
                                         <tr>
-                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:28px; color:#3b3b3b; font-weight: bold; letter-spacing:4px;" th:inline="text">[[${requester_first_name}]] asks you as a friend</td>
+                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:28px; color:#3b3b3b; font-weight: bold; letter-spacing:4px;" th:inline="text">[[${requester_first_name}]] is now your friend</td>
                                         </tr>
                                         <!-- end title -->
                                         <tr>
@@ -84,7 +84,7 @@
                                             <td height="20"> </td>
                                         </tr>
                                         <tr>
-                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:18px; color:#7f8c8d; line-height:20px;" th:inline="text">Hello [[${first_name}]], [[${requester_name}]] asked you as a friend. You can either accept or decline. Your refusal will not be notified ✌️</td>
+                                            <td align="center" style="font-family: 'Open Sans', Arial, sans-serif; font-size:18px; color:#7f8c8d; line-height:20px;" th:inline="text">Hello [[${first_name}]], [[${requester_name}]] is now part of your contacts. You have access to his profile and he will be aware of each ride, event, roadbook you will propose ✌️</td>
                                         </tr>
                                         </tbody>
                                     </table>
